# cpareia

./: .gitignore  ChangeLog  Makefile.am  README.md  args.c  args.h  array.c  array.h  blocking.c  blocking.h  buffer.c  buffer.h  classifier.c  classifier.h  colors.c  colors.h  comparator.c  comparator.h  configure.ac  conjunction.c  conjunction.h  cpareia  cpareia.c  cpareia.h  csv.c  csv.h  database.c  database.h  errors.c  errors.h  field_comparator.c  field_comparator.h  file.c  file.h  glib.supp  hash.c  hash.h  makefile  mem.c  mem.h  (+12 more)
new/: cpareia.c  cpareia.h  database.c  database.h  makefile  record.c  record.h
src/: Makefile.am  args.c  args.h  block.c  block.h  blocking.c  blocking.h  buscabr.cc  buscabr.h  classifier.c  comparator.c  comparator.h  cpareia.c  cpareia.h  csv.c  csv.h  database.c  database.h  field_comparator.c  field_comparator.h  hash.c  output.c  project.c  project.h  record.c  record.h  uint_array.h
test/: block_test.c  block_test.h  database_test.c  database_test.h  makefile  record_test.c  record_test.h
test/fixtures/: database.csv
tests/: Makefile.am  test_args.c  test_args.h  test_block.c  test_block.h  test_database.c  test_database.h  test_record.c  test_record.h
utils/: buscabr.cc
